--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/052ac135cc.js"
       crossorigin="anonymous"
     ></script>
-    <title>React Template</title>
+    <title>SpaceCation</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
