update meta for linkedIn featured section

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,19 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+		<meta name="title" property="og:title" content="SpaceCation" />
+		<meta property="og:type" content="Website" />
+		<meta
+			name="image"
+			property="og:image"
+			content="https://i.ibb.co/X2kbj8X/space.png"
+		/>
+		<meta
+			name="description"
+			property="og:description"
+			content="SpaceCation, an AirBnB clone with an emphasis on renting places to stay in space."
+		/>
+		<meta name="author" content="Cody Lavene" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
